--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "emailjs-com": "^2.4.1",
     "mdbreact": "^4.11.0",
     "mixitup": "^3.3.1",
     "popper.js": "^1.14.7",
